--- a/config/clickup_config.json
+++ b/config/clickup_config.json
@@ -3,5 +3,5 @@
   "list_id": "901412176234",
   "kickoff_field_id": "8ebce881-1682-4de9-b2a2-f449a90ccdd3",
   "aging_field_id": "04713aad-23e4-4e5b-ae40-05a0c944025a",
-  "required_tag": "#new"
+  "required_tag": "%23new"
 }
