--- a/config/clickup_config.json
+++ b/config/clickup_config.json
@@ -2,6 +2,7 @@
   "api_token": "pk_218696006_UXYXEI6AKDLMXJ3P4INX79SD9ZO0UTF0",
   "list_id": "901412176234",
   "kickoff_field_id": "1de6093f-5f08-487a-b3d2-545a5b87d18d",
+  "go_live_field_id": "bc6ee9a2-0d4c-48a5-ab61-92b46e16a187",
   "aging_field_id": "04713aad-23e4-4e5b-ae40-05a0c944025a",
   "required_tag": "%23new"
 }
