Update and rename baseline_update.yml to baseline-aging.yml

--- a/.github/workflows/baseline-aging.yml
+++ b/.github/workflows/baseline-aging.yml
@@ -27,4 +27,4 @@ jobs:
 
       - name: Run baseline updater
         run: |
-          python baseline_update.py
+          python baseline-aging.py
